# dag-thinking

./: .gitignore  .mcp.json  CLAUDE.md  IMPROVEMENTS.md  LICENSE  PLAN.md  README.md  django-vs-spring-v1.md  django_vs_spring_v1.md  django_vs_spring_v2.md  django_vs_spring_v3.md  metric-data.md  prepare_release.py  prompt.txt  pyproject.toml  tool-result.md
.claude/: settings.json
docs/: CHANGELOG.md  EVAL_PLAN.md  IMPROVEMENTS.md  MCP_Best_Practices_and_Lessons.md
reports/: django-spring-comparison-v1.md  django-spring-deep-dive-v1.md  mcp-comparison-report-v1.md  test-3.txt  test-4.txt  test-5.txt
src/: actions.py  compressor.py  db.py  server.py  think.py
tests/: conftest.py  helpers.py  test_bugfixes.py  test_cleanup.py  test_compressor.py  test_dispatcher.py  test_i09_i10.py  test_i11_i12.py  test_improvements.py  test_improvements_2.py  test_invalidate.py  test_mcp_annotations.py  test_mcp_protocol.py  test_mcp_v25.py  test_mcp_v26.py  test_mcp_v27.py  test_mcp_v28.py  test_mcp_v29.py  test_mcp_v30.py  test_p1_p2_p3.py  test_prepare_release.py  test_quality_improvements.py  test_restore.py  test_restore_list_health.py  test_server.py  test_status.py  test_style_and_refactor.py  test_think.py  test_v05_improvements.py  test_v06_improvements.py  test_v07_improvements.py  test_v08_improvements.py  test_v09_improvements.py  test_v10_improvements.py  test_v11_improvements.py  test_v12_improvements.py  test_v13_improvements.py  test_v14_improvements.py  test_v15_improvements.py  test_v16_improvements.py  (+2 more)
tests/eval/: eval_harness.py
(+1 files in other folders)
