[project]
name = "dag-headroom"
version = "0.1.0"
description = "Lightweight MCP server combining DAG-structured reasoning with CCR context compression"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "pydantic>=2.13.4",
]

[project.scripts]
dag-headroom = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
